--- a/vue01.html
+++ b/vue01.html
@@ -2,21 +2,200 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>双向绑定数据v-model</title>
+<title>双向绑定数据v-model表--单控件绑定</title>
+<style>
+#example01{
+	width:700px;
+	margin: 50px auto;
+}
+h1{text-align: center;}
+</style>
 <script src="js/vue.js"  type="text/javascript"></script>
 </head>
 <body>
-<div class="message">
-	<input type="text" v-model="message">
-	{{message}}
-<div>
+<div id="example01">
+	<h1>v-model表单控件绑定</h1>
+	<h2>1. input-text</h2>
+	<h3>单行文本</h3>
+	<div>
+		<input type="text" v-model="message"><br/><br/>
+		你输入的信息是 : {{message}}<br/>
+		<hr>
+		<h3>多行行文本</h3>
+		<textarea v-model="message01" placeholder="add multiple lines"></textarea><br/>
+		你输入的信息是 : {{message01}}<br/>
+	</div>
+
+	<h2>2. input-checkbox</h2>
+	<h3>单个勾选框，逻辑值</h3>
+	<div>
+		<input type="checkbox" id="checkbox" v-model="checked">
+		<label for="checkbox">{{checked}}</label><br><br>
+		单个勾选框是否选中：{{checked}}
+	</div>
+	<hr>
+	<h3>多个勾选框，绑定到同一个数组</h3>
+	<!--需要有一个数组存放选项值 -->
+	<div>
+		<input type="checkbox" id="jack" value="a" v-model="checkeds">
+		<label for="jack">a</label>
+		<input type="checkbox" id="john" value="b" v-model="checkeds">
+		<label for="john">b</label>
+		<input type="checkbox" id="mike" value="c" v-model="checkeds">
+		<label for="mike">c</label>
+		<br>
+		<span>多个勾选框选中: {{checkedNames}}</span>
+	</div>
+
+	<h2>3. input-radio</h2>
+	<h3>单选按钮：</h3>
+	<div>
+	<!--单选,类似单行,不过需要注意的是他们使用同一个v-modal-->
+	    <input type="radio" id="one" value="One" v-model="picked">
+	    <label for="one">One</label>
+	    <br>
+	    <input type="radio" id="two" value="Two" v-model="picked">
+	    <label for="two">Two</label>
+	    <br>
+	    <span>单选按钮的值是 : {{picked}}</span>
+	</div>
+
+	<h2>4. input-select</h2>
+	<h3>单选列表:</h3>
+	<div>
+		<select v-model="selected">
+		    <option value="A">A</option>
+		    <option value="B">B</option>
+		    <option value="C">C</option>
+		  </select>
+		  <br>
+		<span>单选列表选择的值是： {{selected}}</span> 
+	</div>
+	<hr>
+	<h3>多选列表（绑定到一个数组）：</h3>
+	<!--需要有一个数组存放选项值 -->
+	<div>
+		<select v-model="select01" multiple style="width: 50px">
+		    <option value="A">A</option>
+		    <option value="B">B</option>
+		    <option value="C">C</option>
+		  </select>
+		  <br>
+		<span>multiple多选列表选择的值是： {{select01}}<br>（选中一个中拖动再继续选）或按ctrl/shift</span>
+	</div>
+	<hr>
+	<h2>5.select-option</h2>
+	<h3>动态选项，用 v-for 渲染：</h3>
+	<!--用v-for遍历-->
+	<!--v-bind绑定value(这是select元素的value)对应遍历项的value属性(这是data数据里面options数组里面的属性value)-->
+	<div>
+		<select v-model="select02">
+		  <option v-for="option in options" v-bind:value="option.value">
+		    {{ option.text }}
+		  </option>
+		</select>
+		<br><br>
+		<span>单选列表选择的值是: {{ select02}}</span>
+	</div>
+
+	<h2>6.绑定 value</h2>
+	<h3>对于单选按钮，勾选框及选择列表选项， v-model 绑定的 value 通常是静态字符串（对于勾选框是逻辑值）：</h3>
+	<div>
+		<!-- 当选中时，`picked` 为字符串 "a" -->
+		<input type="radio" v-model="checked01" value="a"><br><br>
+		单选按钮当选中时 : {{checked01}}<br><br>
+		<!-- 当选中时，`selected` 为字符串 "abc" -->
+		<select v-model="select03">
+		  <option value="abc">ABC</option>
+		</select><br><br>
+		选择列表选项当选中时 : {{select03}}<br><br>
+		<!-- `toggle` 为 true 或 false -->
+		<input type="checkbox" v-model="toggle">勾选框<br><br>
+		勾选框当选中时 : {{toggle}}
+		<hr>
+		<h3>复选框绑定变量切换</h3>
+		<!--v-model绑定的是一个toggle变量,这个变量会返回的true或者false(自己设定的,可以是返回别的)-->
+		<!--分别绑定2个DOM值(动态值)的值为数据a,b的值-->
+		<!--当选中时,vm.toggle_checkbox === vm.a,当没有选中时,vm.toggle_checkbox === vm.b-->
+		<input type="checkbox" v-model="toggle_checkbox" v-bind:true-value="a" v-bind:false-value="b" >{{toggle_checkbox}}<br><br>
+		<hr>
+		<h3>单选按钮绑定变量切换</h3>
+		<!--v-model绑定的是一个字符串 "c"(自己设定的,可以是返回别的)-->
+		<!--绑定1个DOM值(动态值)的值为数据c的值-->
+		<!--当选中时,vm.toggle_radio === vm.c-->
+		<input type="radio"  v-model="toggle_radio" v-bind:value="c">{{toggle_radio}}<br><br>
+		<hr>
+		<h3>选择列表设置</h3>
+		<!--当选中时,typeof vm.select04 // -> 'object',vm.select04.number // -> 123-->
+		<select v-model="select04">
+		    <!-- 内联对象字面量 -->
+		  <option v-bind:value="{ number: 123 }"> 123</option>
+		</select>
+		{{select04.number}}
+	</div>
+
+	<h2>7.修饰符</h2>
+	<div>
+		<h3>lazy</h3>
+		只有当这个input发生change事件事才会更新数字，输入时不会<br></br>
+		<input type="text" v-model.lazy="message02" ><br></br>
+		输入的是：{{message02}}
+		<hr>
+		<h3>.number</h3>
+		自动将用户的输入值转为 Number类型，最好配合type="number"<br></br>
+		<input type="number" v-model.number="age"><br></br>
+		输入的是：{{age}}
+		<hr>
+		<h3>.trim</h3>
+		自动过滤用户输入的首尾空格，可以添加 trim 修饰符到 v-model 上过滤输入<br></br>
+		<input type="text" v-model.trim="message03"><br></br>
+		输入的是：{{message03}}
+	</div>
+</div>
 <script  type="text/javascript">
-	 new Vue({
-		el:".message",
+	var vm=new Vue({
+		el:"#example01",
 		data:{
-			message:"我十岁"
+			message:"",
+			message01:"",
+			checked: false,
+			checkeds: [],
+			picked:'',
+			selected: "B",
+		    select01: [],
+		    select02:"B",
+		    options:[
+		    	{value:'A',text:'A'},
+				{value:'B',text:'B'},
+				{value:'C',text:'C'},
+				{value:'D',text:'D'}
+		    ],
+		    checked01:'',
+		    toggle:"",
+		    select03:"",
+		    toggle_checkbox: '全选', // 默认设置是'全选',勾选之后因为会切换到true-value的值,所以结果是true(按顺序切换)
+            a: "取消全选",
+            b: "全选",
+            toggle_radio:"",
+            c: "选中啦",
+            select04:[],
+            number:"",
+            message02:"",
+            age:"",
+            message03:""
+		},
+		computed:{
+			checkedNames:function(){
+				var returnStr = '';
+				if(this.checkeds.length > 0){
+					for(var i = 0; i < this.checkeds.length; i ++){
+						returnStr += i==0 ? this.checkeds[i] : ','+this.checkeds[i];
+					}
+				}
+				return returnStr;
+			}
 		}
-	})
+	});
 </script>
 </body>
 </html>
