--- a/vue01.html
+++ b/vue01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>双向绑定数据v-model表--单控件绑定</title>
+<title>v-model表单控件绑定</title>
 <style>
 #example01{
 	width:700px;
